--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,10 +21,11 @@ jobs:
       uses: easingthemes/ssh-deploy@main
       env:
           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
-          ARGS:  >-  
-            -rltgoDzvO
-            --exclude='.git'
-            --exclude='node_modules/'
+#           ARGS:  >-  
+#             -rltgoDzvO
+#             --exclude='.git'
+#             --exclude='node_modules/'
+          SOURCE: "./"
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_TARGET }}
