--- a/.github/workflows/trialdeployment.yml
+++ b/.github/workflows/trialdeployment.yml
@@ -30,20 +30,21 @@ jobs:
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_TARGET }}
       run:
-          echo "$SSH_PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${REMOTE_USER}@${REMOTE_HOST} '
-            if [ ! -d $DIR ]
-            then
+#           echo "$SSH_PRIVATE_KEY" > private_key && chmod 600 private_key
+#           ssh -o StrictHostKeyChecking=no -i private_key ${REMOTE_USER}@${REMOTE_HOST} '
+            ssh  -i ${SSH_PRIVATE_KEY} ${REMOTE_USER}@${REMOTE_HOST} '
+             if [ ! -d $DIR ]
+             then
               mkdir server &&
               git clone https://github.com/data-doll/demo.git server &&
               cd server &&
               npm i
-            else
+             else
               cd server
-            fi
+             fi
             
-            node index.js
+             node index.js
             
-            echo('RUNNING')
+             echo('RUNNING')
            
            '
