--- a/.github/workflows/trialdeployment.yml
+++ b/.github/workflows/trialdeployment.yml
@@ -15,8 +15,7 @@ jobs:
         node-version: '10.x'
     - name: Install npm dependencies
       run: npm install
-    - name: Run build task
-      run: npm run build --if-present
+
     - name: Deploy to Server
 #       uses: easingthemes/ssh-deploy@main
       env:
@@ -32,7 +31,7 @@ jobs:
       run:
           echo "$SSH_PRIVATE_KEY" > private_key && chmod 400 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${REMOTE_USER}@${REMOTE_HOST} '
-#             ssh  -i ${SSH_PRIVATE_KEY} ${REMOTE_USER}@${REMOTE_HOST} '
+             DIR="/home/ubuntu/server"
              if [ ! -d $DIR ]
              then
               mkdir server &&
