--- a/.github/workflows/trialdeployment.yml
+++ b/.github/workflows/trialdeployment.yml
@@ -29,8 +29,10 @@ jobs:
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_TARGET }}
       run:
-          echo "$SSH_PRIVATE_KEY" > private_key && chmod 400 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${REMOTE_USER}@${REMOTE_HOST} '
+#           echo "$SSH_PRIVATE_KEY" > private_key && chmod 400 private_key
+#           ssh -o StrictHostKeyChecking=no -i private_key ${REMOTE_USER}@${REMOTE_HOST} '
+            echo "$SSH_PRIVATE_KEY" > private_key && chmod 400 private_key
+            ssh -i private_key ${REMOTE_USER}@${REMOTE_HOST} '
              DIR="/home/ubuntu/server"
              if [ ! -d $DIR ]
              then
