--- a/.github/workflows/trialdeployment.yml
+++ b/.github/workflows/trialdeployment.yml
@@ -93,7 +93,7 @@ jobs:
          
          npm i &&
 
-         pm2 start index.js
+#          pm2 start index.js
          
          pm2 start index.js
             
