--- a/.github/workflows/trialdeployment.yml
+++ b/.github/workflows/trialdeployment.yml
@@ -94,6 +94,6 @@ jobs:
          
          npm i &&
        
-         pm2 start npm --start
+         pm2 start index.js
             
             
