--- a/.github/workflows/trialdeployment.yml
+++ b/.github/workflows/trialdeployment.yml
@@ -77,7 +77,7 @@ jobs:
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_TARGET }}
-      run:
+      run: |
          sudo apt install nodejs
          
          sudo apt install npm
