--- a/.github/workflows/trialdeployment.yml
+++ b/.github/workflows/trialdeployment.yml
@@ -77,19 +77,18 @@ jobs:
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_TARGET }}
-      run: |
-         sudo apt install nodejs
+    - run: sudo apt install nodejs
          
-         sudo apt install npm
+    - run: sudo apt install npm
          
-         sudo npm i -g pm2
+    - run: sudo npm i -g pm2
          
-         mkdir myserver && cd &_
+    - run: mkdir myserver && cd &_
          
-         git clone https://github.com/data-doll/demo.git
+    - run: git clone https://github.com/data-doll/demo.git
          
-         npm i 
+    - run: npm i 
          
-         sudo pm2 start index.js
+    - run: sudo pm2 start index.js
             
             
