--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,7 +35,7 @@ jobs:
         username: ${{ secrets.REMOTE_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
 #         port: ${{ secrets.SSH_PORT }}
-        script: |
+        script: whoami
           mkdir node-github-demo
           cd ~/node-github-demo
           git clone https://github.com/data-doll/demo.git ~/node-github-demo
