--- a/.github/workflows/trialssh.yml
+++ b/.github/workflows/trialssh.yml
@@ -12,5 +12,5 @@ jobs:
         host: ${{ secrets.REMOTE_HOST }}
         username: ${{ secrets.REMOTE_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
-        port: ${{ secrets.SSH_PORT }}
+#         port: ${{ secrets.SSH_PORT }}
         script: whoami
