--- a/.github/workflows/trialssh.yml
+++ b/.github/workflows/trialssh.yml
@@ -1,16 +1,45 @@
-name: remote ssh command
-on: [push]
-jobs:
+name: sshtry
 
-  build:
-    name: Build
+on:
+  push:
+    branches:
+      - master
+
+jobs:
+  test:
+
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [8.x, 10.x, 12.x]
+
     steps:
-    - name: executing remote ssh commands using password
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: npm install and test
+      run: |
+        npm install
+
+
+  deploy:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: SSH and deploy node app
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.REMOTE_HOST }}
         username: ${{ secrets.REMOTE_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
 #         port: ${{ secrets.SSH_PORT }}
-        script: whoami
+        script: |
+          mkdir node-github-demo
+          cd ~/node-github-demo
+          git clone https://github.com/data-doll/demo.git node-github-demo
+          npm install --production
+          pm2 restart node-app
