--- a/.github/workflows/trial5.yml
+++ b/.github/workflows/trial5.yml
@@ -31,3 +31,17 @@ jobs:
           REMOTE_HOST: ${{ secrets.REMOTE_HOST}}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: /home/ubuntu
+
+      - name: Post Deploy
+        uses: appleboy/ssh-action@master
+        with:
+            host: ${{ secrets.REMOTE_HOST_PROD }}
+            username: ${{ secrets.REMOTE_USER_PROD }}
+            key: ${{ secrets.SSH_PRIVATE_KEY_PROD }}
+            port: 22
+            script: | 
+              mkdir node-github-demo
+              cd ~/node-github-demo
+              git clone https://github.com/data-doll/demo.git node-github-demo
+              npm install --production
+              pm2 restart node-app
