--- a/.github/workflows/trial5.yml
+++ b/.github/workflows/trial5.yml
@@ -35,11 +35,11 @@ jobs:
       - name: Post Deploy
         uses: appleboy/ssh-action@master
         with:
-            host: ${{ secrets.REMOTE_HOST_PROD }}
-            username: ${{ secrets.REMOTE_USER_PROD }}
-            key: ${{ secrets.SSH_PRIVATE_KEY_PROD }}
+            host: ${{ secrets.REMOTE_HOST }}
+            username: ${{ secrets.REMOTE_USER }}
+            key: ${{ secrets.SSH_PRIVATE_KEY }}
             port: 22
-            key_path: /home/ubuntu/.ssh
+#             key_path: /home/ubuntu/.ssh
             script: | 
               mkdir node-github-demo
               cd ~/node-github-demo
