--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src",
+    "build": "node index.js",
     "test": "jest src/app.test.js"
   },
   "author": "",
