--- a/.github/workflows/deploytry1.yml
+++ b/.github/workflows/deploytry1.yml
@@ -16,42 +16,7 @@ jobs:
     - name: Install npm dependencies
       run: npm install
            npm run build
-
-#     - name: Deploy to Server
-# #       uses: easingthemes/ssh-deploy@main
-#       env:
-#           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
-# #           ARGS:  >-  
-# #             -rltgoDzvO
-# #             --exclude='.git'
-# #             --exclude='node_modules/'
-#           SOURCE: "./"
-#           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-#           REMOTE_USER: ${{ secrets.REMOTE_USER }}
-#           TARGET: ${{ secrets.REMOTE_TARGET }}
-#       run:
-# #           echo "$SSH_PRIVATE_KEY" > private_key && chmod 400 private_key
-# #           ssh -o StrictHostKeyChecking=no -i private_key ${REMOTE_USER}@${REMOTE_HOST} '
-#             echo "$SSH_PRIVATE_KEY" > private_key && chmod 400 private_key
-                        
-#             ssh -i private_key ${REMOTE_USER}@${REMOTE_HOST} '
-            
-#              DIR="/home/ubuntu/server"
-             #              if [ ! -d $DIR ]
-#              then
-#               mkdir server &&
-#               git clone https://github.com/data-doll/demo.git server &&
-#               cd server &&
-#               npm i
-#              else
-#               cd server
-#              fi
-            
-#              node index.js
-            
-#              echo('RUNNING')
-           
-#            '
+           nom -v
 
     - name: Deploy to Server
       uses: easingthemes/ssh-deploy@main
@@ -65,3 +30,22 @@ jobs:
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_TARGET }}
+
+#     - name: Deploying
+
+#       run:
+#          sudo apt install nodejs
+         
+#          sudo apt install npm
+         
+#          npm i -g pm2
+         
+#          mkdir myserver 
+         
+#          git clone https://github.com/data-doll/demo.git myserver 
+              
+#          cd myserver 
+         
+#          npm i
+                  
+#          pm2 start index.js
