--- a/.github/workflows/deploytry1.yml
+++ b/.github/workflows/deploytry1.yml
@@ -14,9 +14,11 @@ jobs:
       with:
         node-version: '10.x'
     - name: Install npm dependencies
-      run: npm install
-           npm run build
-           nom -v
+      run: npm install &&
+           npm run build &&
+           npm -v &&
+           echo "DONE"
+           
 
     - name: Deploy to Server
       uses: easingthemes/ssh-deploy@main
