--- a/.github/workflows/deploytry1.yml
+++ b/.github/workflows/deploytry1.yml
@@ -15,9 +15,9 @@ jobs:
         node-version: '10.x'
     - name: Install npm dependencies
       run: npm install &&
-           npm run build &&
            npm -v &&
-           echo "DONE"
+           echo "BUILDING"  &&
+           npm run build
            
 
     - name: Deploy to Server
